--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "atividade 6": "c",
-        "atividade 7": "c"
+        "atividade 7": "c",
+        "atividade 3": "c"
     }
 }
